remove properties because it doesn't get read automatically